update picker doc

--- a/MduiBlazor.Shared/Pages/PickerPage.razor
+++ b/MduiBlazor.Shared/Pages/PickerPage.razor
@@ -44,7 +44,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <th rowspan="10">
+                    <th rowspan="12">
                         <code>MduiPicker</code>
                     </th>
                     <td>
@@ -55,6 +55,15 @@
                     </td>
                     <td><code>input</code>标签的<code>name</code>属性。</td>
                 </tr>
+                 <tr>
+                     <td>
+                         <code>Placeholder</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td><code>input</code>标签的<code>placeholder</code>属性。</td>
+                 </tr>
                  <tr>
                      <td>
                          <code>Searchable</code>
@@ -135,6 +144,15 @@
                          <code>string?</code>
                      </td>
                      <td>下拉项的最大高度，该值为样式<code>max-height</code>的值，如<code>200px</code>、<code>20rem</code>等。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>DirectionTop</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>下拉项是否向上展开，默认<code>false</code>。</td>
                  </tr>
                 <tr>
                     <th rowspan="3">
