--- a/MduiBlazor.Shared/Pages/Examples/Menus/CustomActivatorMenu.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Menus/CustomActivatorMenu.razor
@@ -1,7 +1,9 @@
 ﻿<div style="width: 100%;display:flex;justify-content:center;">
     <MduiMenu>
         <ActivatorContent>
-            <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+            <MduiAvatar>
+                <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+            </MduiAvatar>
         </ActivatorContent>
         <ChildContent>
             <MduiMenuItem>Refresh</MduiMenuItem>
