--- a/MduiBlazor.Shared/Pages/Examples/Pagers/TableWithPagination.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Pagers/TableWithPagination.razor
@@ -16,7 +16,7 @@
         <MduiCol>
             <MduiRow>
                 <MduiCol>
-                    <MduiSelect TValue="@int" Value="@pageSize" ValueChanged="@OnPageSizeChanged">
+                    <MduiSelect Style="width:40px" TValue="@int" Value="@pageSize" ValueChanged="@OnPageSizeChanged">
                         <option value="5">5</option>
                         <option value="20">20</option>
                         <option value="50">50</option>
