--- a/mdui/src/components/input/radio.less
+++ b/mdui/src/components/input/radio.less
@@ -36,7 +36,7 @@
 /* 图标外圈 */
 .mdui-radio-icon {
   position: absolute;
-  top: 9px;
+  top: 50%;
   left: 0;
   display: inline-block;
   box-sizing: border-box;
@@ -45,6 +45,7 @@
   vertical-align: middle;
   border: 2px solid @color-black-icon;
   border-radius: 18px;
+  transform: translateY(-50%);
   transition: all .3s @animation-curve-default,
     box-shadow .14s @animation-curve-default;
 
