--- a/mdui/src/components/input/switch.less
+++ b/mdui/src/components/input/switch.less
@@ -27,7 +27,7 @@
 /* 图标轨道 */
 .mdui-switch-icon {
   position: absolute;
-  top: 9px;
+  top: 50%;
   left: 0;
   display: inline-block;
   width: 36px;
@@ -35,6 +35,7 @@
   vertical-align: middle;
   background-color: rgba(0, 0, 0, 0.38);
   border-radius: 14px;
+  transform: translateY(-50%);
   transition: background-color .3s @animation-curve-default;
 
   // 圆形图标
