fix textfield demo

--- a/MduiBlazor.Shared/Pages/TextfieldPage.razor
+++ b/MduiBlazor.Shared/Pages/TextfieldPage.razor
@@ -13,7 +13,7 @@
     <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="单行文本框" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="固定标签文本框" OnClick="@(_=>ScrollToElementById("label"))" />
-        <PageContentItem Title="文本按钮文本框" OnClick="@(_=>ScrollToElementById("floating"))" />
+        <PageContentItem Title="浮动标签文本框" OnClick="@(_=>ScrollToElementById("floating"))" />
         <PageContentItem Title="禁用状态" OnClick="@(_=>ScrollToElementById("disabled"))" />
         <PageContentItem Title="多行文本框" OnClick="@(_=>ScrollToElementById("multiRows"))" />
         <PageContentItem Title="含帮助文本" OnClick="@(_=>ScrollToElementById("helperText"))" />
