update z-index and the components use z-index

--- a/MduiBlazor/Components/Menu/MduiMenu.razor
+++ b/MduiBlazor/Components/Menu/MduiMenu.razor
@@ -24,7 +24,7 @@
     {
         <MduiIconButton Icon="@Icon" Color="@Color" OnClick="@OnActivatorClicked" />
     }
-    <ul class="@MenuListClass">
+    <ul class="@MenuContentClassname">
         <CascadingValue Value="@this" IsFixed>
             @ChildContent
         </CascadingValue>
