--- a/mdui/src/components/fab/index.less
+++ b/mdui/src/components/fab/index.less
@@ -56,8 +56,7 @@
 }
 
 /* 固定到右下角的 FAB 按钮 */
-.mdui-fab-fixed,
-.mdui-fab-wrapper {
+.mdui-fab-fixed {
   position: fixed !important;
 
   /* 手机平板上距离屏幕右下角 16px */
@@ -74,7 +73,6 @@
 /* 含菜单的浮动操作按钮 */
 .mdui-fab-wrapper {
   position: relative;
-  z-index: @z-index-fab;
   width: @fab-size;
   height: @fab-size;
   padding-top: 8px;
