update collapse component and components used it

--- a/MduiBlazor.Server/Pages/_Host.cshtml
+++ b/MduiBlazor.Server/Pages/_Host.cshtml
@@ -42,12 +42,9 @@
     <script src="_framework/blazor.server.js"></script>
 
     <!-- highlight -->
-    <script type="text/javascript"
-            src="_content/MduiBlazor.Shared/highlight/js/highlight.min.js"></script>
-    <script type="text/javascript"
-            src="_content/MduiBlazor.Shared/highlight/js/cshtml-razor.min.js"></script>
-    <script type="text/javascript"
-            src="_content/MduiBlazor.Shared/highlight/js/highlightjs-copy.min.js"></script>
+    <script type="text/javascript" src="_content/MduiBlazor.Shared/highlight/js/highlight.min.js"></script>
+    <script type="text/javascript" src="_content/MduiBlazor.Shared/highlight/js/cshtml-razor.min.js"></script>
+    <script type="text/javascript" src="_content/MduiBlazor.Shared/highlight/js/highlightjs-copy.min.js"></script>
     <script>
         if (hljs != null) {
             hljs.addPlugin(new CopyButtonPlugin());
