--- a/MduiBlazor.Shared/Pages/Examples/Lists/IconList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/IconList.razor
@@ -1,6 +1,18 @@
 <MduiList Style="max-width:480px;">
-    <MduiListItem Title="Inbox" Icon="move_to_inbox" />
-    <MduiListItem Title="Outbox" Icon="send" />
-    <MduiListItem Title="Trash" Icon="delete" />
-    <MduiListItem Title="Spam" Icon="error" />
+    <MduiListItem>
+        <MduiIcon Icon="move_to_inbox" />
+        <MduiListItemContent>Inbox</MduiListItemContent>
+    </MduiListItem>
+    <MduiListItem>
+        <MduiIcon Icon="send" />
+        <MduiListItemContent>Outbox</MduiListItemContent>
+    </MduiListItem>
+    <MduiListItem>
+        <MduiIcon Icon="delete" />
+        <MduiListItemContent>Trash</MduiListItemContent>
+    </MduiListItem>
+    <MduiListItem>
+        <MduiIcon Icon="error" />
+        <MduiListItemContent>Spam</MduiListItemContent>
+    </MduiListItem>
 </MduiList>
