--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -9,13 +9,13 @@
             <MduiIcon Icon="layers" Color="@Colors.DeepOrange.Primary" />
         </IconContent>
         <ChildContent>
-            <MduiNavMenuItem Href="colors">颜色</MduiNavMenuItem>
-            <MduiNavMenuItem Href="layout">主题和布局</MduiNavMenuItem>
-            <MduiNavMenuItem Href="grid">网格容器</MduiNavMenuItem>
-            <MduiNavMenuItem Href="typography">排版</MduiNavMenuItem>
-            <MduiNavMenuItem Href="icons">图标</MduiNavMenuItem>
-            <MduiNavMenuItem Href="media">媒体</MduiNavMenuItem>
-            <MduiNavMenuItem Href="classes">辅助类</MduiNavMenuItem>
+            <MduiNavMenuItem Href="colors" Icon="">颜色</MduiNavMenuItem>
+            <MduiNavMenuItem Href="layout" Icon="">主题和布局</MduiNavMenuItem>
+            <MduiNavMenuItem Href="grid" Icon="">网格容器</MduiNavMenuItem>
+            <MduiNavMenuItem Href="typography" Icon="">排版</MduiNavMenuItem>
+            <MduiNavMenuItem Href="icons" Icon="">图标</MduiNavMenuItem>
+            <MduiNavMenuItem Href="media" Icon="">媒体</MduiNavMenuItem>
+            <MduiNavMenuItem Href="classes" Icon="">辅助类</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
     <MduiNavMenuCollapse Title="组件">
@@ -23,33 +23,33 @@
             <MduiIcon Icon="widgets" Color="@Colors.Green.Primary" />
         </IconContent>
         <ChildContent>
-            <MduiNavMenuItem Href="avatars">头像</MduiNavMenuItem>
-            <MduiNavMenuItem Href="badge">徽章</MduiNavMenuItem>
-            <MduiNavMenuItem Href="buttons">按钮</MduiNavMenuItem>
-            <MduiNavMenuItem Href="fabbuttons">浮动操作按钮</MduiNavMenuItem>
-            <MduiNavMenuItem Href="textfield">文本框</MduiNavMenuItem>
-            <MduiNavMenuItem Href="selectcontrol">选择控件</MduiNavMenuItem>
-            <MduiNavMenuItem Href="select">下拉选择</MduiNavMenuItem>
-            <MduiNavMenuItem Href="slider">滑块</MduiNavMenuItem>
-            <MduiNavMenuItem Href="datetime">日期时间控件</MduiNavMenuItem>
-            <MduiNavMenuItem Href="forms">窗体验证</MduiNavMenuItem>
-            <MduiNavMenuItem Href="progress">进度指示器</MduiNavMenuItem>
-            <MduiNavMenuItem Href="panels">可扩展面板</MduiNavMenuItem>
-            <MduiNavMenuItem Href="divider">分割线</MduiNavMenuItem>
-            <MduiNavMenuItem Href="list">列表</MduiNavMenuItem>
-            <MduiNavMenuItem Href="tabs">Tab 选项卡</MduiNavMenuItem>
-            <MduiNavMenuItem Href="toolbar">工具栏</MduiNavMenuItem>
-            <MduiNavMenuItem Href="bottomnav">底部导航栏</MduiNavMenuItem>
-            <MduiNavMenuItem Href="cards">卡片</MduiNavMenuItem>
-            <MduiNavMenuItem Href="chips">纸片</MduiNavMenuItem>
-            <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
-            <MduiNavMenuItem Href="snackbars">Snackbar</MduiNavMenuItem>
-            <MduiNavMenuItem Href="dialogs">对话框</MduiNavMenuItem>
-            <MduiNavMenuItem Href="menus">菜单</MduiNavMenuItem>
-            <MduiNavMenuItem Href="tables">表格</MduiNavMenuItem>
-            <MduiNavMenuItem Href="pagination">分页</MduiNavMenuItem>
-            <MduiNavMenuItem Href="treeview">树形组件</MduiNavMenuItem>
-            <MduiNavMenuItem Href="picker">通用选择器</MduiNavMenuItem>
+            <MduiNavMenuItem Href="avatars" Icon="">头像</MduiNavMenuItem>
+            <MduiNavMenuItem Href="badge" Icon="">徽章</MduiNavMenuItem>
+            <MduiNavMenuItem Href="buttons" Icon="">按钮</MduiNavMenuItem>
+            <MduiNavMenuItem Href="fabbuttons" Icon="">浮动操作按钮</MduiNavMenuItem>
+            <MduiNavMenuItem Href="textfield" Icon="">文本框</MduiNavMenuItem>
+            <MduiNavMenuItem Href="selectcontrol" Icon="">选择控件</MduiNavMenuItem>
+            <MduiNavMenuItem Href="select" Icon="">下拉选择</MduiNavMenuItem>
+            <MduiNavMenuItem Href="slider" Icon="">滑块</MduiNavMenuItem>
+            <MduiNavMenuItem Href="datetime" Icon="">日期时间控件</MduiNavMenuItem>
+            <MduiNavMenuItem Href="forms" Icon="">窗体验证</MduiNavMenuItem>
+            <MduiNavMenuItem Href="progress" Icon="">进度指示器</MduiNavMenuItem>
+            <MduiNavMenuItem Href="panels" Icon="">可扩展面板</MduiNavMenuItem>
+            <MduiNavMenuItem Href="divider" Icon="">分割线</MduiNavMenuItem>
+            <MduiNavMenuItem Href="list" Icon="">列表</MduiNavMenuItem>
+            <MduiNavMenuItem Href="tabs" Icon="">Tab 选项卡</MduiNavMenuItem>
+            <MduiNavMenuItem Href="toolbar" Icon="">工具栏</MduiNavMenuItem>
+            <MduiNavMenuItem Href="bottomnav" Icon="">底部导航栏</MduiNavMenuItem>
+            <MduiNavMenuItem Href="cards" Icon="">卡片</MduiNavMenuItem>
+            <MduiNavMenuItem Href="chips" Icon="">纸片</MduiNavMenuItem>
+            <MduiNavMenuItem Href="tooltip" Icon="">工具提示</MduiNavMenuItem>
+            <MduiNavMenuItem Href="snackbars" Icon="">Snackbar</MduiNavMenuItem>
+            <MduiNavMenuItem Href="dialogs" Icon="">对话框</MduiNavMenuItem>
+            <MduiNavMenuItem Href="menus" Icon="">菜单</MduiNavMenuItem>
+            <MduiNavMenuItem Href="tables" Icon="">表格</MduiNavMenuItem>
+            <MduiNavMenuItem Href="pagination" Icon="">分页</MduiNavMenuItem>
+            <MduiNavMenuItem Href="treeview" Icon="">树形组件</MduiNavMenuItem>
+            <MduiNavMenuItem Href="picker" Icon="">通用选择器</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
     <MduiNavMenuCollapse Title="资源">
@@ -57,7 +57,7 @@
             <MduiIcon Icon="local_mall" Color="@Colors.Purple.Primary" />
         </IconContent>
         <ChildContent>
-            <MduiNavMenuItem Href="material_icon">Material 图标库</MduiNavMenuItem>
+            <MduiNavMenuItem Href="material_icon" Icon="">Material 图标库</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
 </MduiNavMenu>
