--- a/MduiBlazor/Components/NavMenu/MduiNavMenuItem.razor
+++ b/MduiBlazor/Components/NavMenu/MduiNavMenuItem.razor
@@ -1,8 +1,7 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
-@implements IDisposable
 
-<NavLink href="@Href" class="@Classname" style="@Style" ActiveClass="mdui-list-item-active" Match="@Match"
+<NavLink href="@Href" class="@Classname" style="@Stylelist" ActiveClass="mdui-list-item-active" Match="@Match"
 @attributes="@AdditionalAttributes">
     @if (IconContent is not null)
     {
