--- a/mdui/src/components/list/index.less
+++ b/mdui/src/components/list/index.less
@@ -4,6 +4,7 @@
  * =============================================================================
  */
 @import '../avatar/index';
+@import '../collapse/index';
 
 /* 列表 */
 .mdui-list {
@@ -72,6 +73,7 @@
   box-sizing: border-box;
   min-height: 48px;
   padding: 0 16px;
+  line-height: 20px;
   text-decoration: none;
   cursor: pointer;
   transition: background-color .3s @animation-curve-default;
@@ -94,9 +96,6 @@
   flex-grow: 1;
   padding-top: 14px;
   padding-bottom: 14px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
 }
 
 /* 列表项内容的副内容 */
