--- a/MduiBlazor.Shared/Pages/Examples/Lists/SimpleList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/SimpleList.razor
@@ -1,5 +1,5 @@
 <MduiList Style="max-width:480px;">
-    <MduiListItem Title="Inbox" />
-    <MduiListItem Title="Starred" />
-    <MduiListItem Title="Send mail" />
+    <MduiListItem>Inbox</MduiListItem>
+    <MduiListItem>Starred</MduiListItem>
+    <MduiListItem>Send mail</MduiListItem>
 </MduiList>
