--- a/MduiBlazor/Components/List/MduiListItem.razor
+++ b/MduiBlazor/Components/List/MduiListItem.razor
@@ -1,21 +1,6 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<li class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    @if (ChildContent is not null)
-    {
-        @ChildContent
-    }
-    else
-    {
-        if (IconContent is not null)
-        {
-            @IconContent
-        }
-        else if (Icon is not null)
-        {
-            <MduiIcon Icon="@Icon" />
-        }
-        <MduiListItemContent Title="@Title" />
-    }
+<li class="@Classname" style="@Stylelist" @attributes="@AdditionalAttributes">
+    @ChildContent
 </li>
