fix demo update to v8.0.12

--- a/MduiBlazor.Shared/Pages/Examples/Lists/SwitchList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/SwitchList.razor
@@ -9,5 +9,9 @@
         <MduiListItemContent>Bluetooth</MduiListItemContent>
         <MduiCheckbox Switch />
     </MduiListItem>
-    <MduiListItem Title="Data usage" Icon="data_usage" />
+    <MduiListItem>
+        <MduiIcon Icon="data_usage" />
+        <MduiListItemContent>Data usage</MduiListItemContent>
+        <MduiCheckbox Switch />
+    </MduiListItem>
 </MduiList>
