--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<MduiNavMenu Accordion>
+﻿<MduiNavMenu Accordion Style="font-size:16px;">
     <MduiNavMenuItem Title="开始使用" Href="" Match="NavLinkMatch.All">
         <IconContent>
             <MduiIcon Icon="near_me" Color="@Colors.Blue.Primary" />
