fix picker and demo

--- a/MduiBlazor.Shared/Pages/Examples/Lists/CascadeList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/CascadeList.razor
@@ -8,9 +8,18 @@
         <MduiListItemContent>Dashboard</MduiListItemContent>
     </MduiListItem>
     <MduiListCollapse Dense Title="Audience" Icon="people">
-        <MduiListItem>Overview</MduiListItem>
-        <MduiListItem>Language</MduiListItem>
-        <MduiListItem>Location</MduiListItem>
+        <MduiListItem>
+            <MduiIcon Icon="" />
+            <MduiListItemContent>Overview</MduiListItemContent>
+        </MduiListItem>
+        <MduiListItem>
+            <MduiIcon Icon="" />
+            <MduiListItemContent>Language</MduiListItemContent>
+        </MduiListItem>
+        <MduiListItem>
+            <MduiIcon Icon="" />
+            <MduiListItemContent>Location</MduiListItemContent>
+        </MduiListItem>
         <MduiListCollapse Dense Title="New vs Returning" Icon="fiber_new">
             <MduiListItem>Overview</MduiListItem>
             <MduiListItem>All Traffic</MduiListItem>
