--- a/MduiBlazor.Shared/Pages/Examples/TreeView/MultiSelectionTreeView.razor
+++ b/MduiBlazor.Shared/Pages/Examples/TreeView/MultiSelectionTreeView.razor
@@ -1,4 +1,4 @@
-<div>选择的值：@string.Join(',', selectedValues)</div>
+<div>选择的值：@string.Join(", ", selectedValues)</div>
 
 <MduiTreeView MultiSelection @bind-SelectedValues="@selectedValues">
     <MduiTreeViewItem Value="@("1")" Title="Level 1">
