--- a/MduiBlazor.Shared/Pages/PickerPage.razor
+++ b/MduiBlazor.Shared/Pages/PickerPage.razor
@@ -44,116 +44,98 @@
             </thead>
             <tbody>
                 <tr>
-                    <th rowspan="12">
+                    <th rowspan="10">
                         <code>MduiPicker</code>
                     </th>
                     <td>
-                        <code>Name</code>
+                        <code>Searchable</code>
+                    </td>
+                    <td>
+                        <code>bool</code>
+                    </td>
+                    <td>是否允许搜索下拉项，默认<code>false</code>。</td>
+                </tr>
+                <tr>
+                    <td>
+                        <code>Placeholder</code>
                     </td>
                     <td>
                         <code>string?</code>
                     </td>
-                    <td><code>input</code>标签的<code>name</code>属性。</td>
+                    <td><code>input</code>标签的<code>placeholder</code>属性。</td>
                 </tr>
-                 <tr>
-                     <td>
-                         <code>Placeholder</code>
-                     </td>
-                     <td>
-                         <code>string?</code>
-                     </td>
-                     <td><code>input</code>标签的<code>placeholder</code>属性。</td>
-                 </tr>
-                 <tr>
-                     <td>
-                         <code>Searchable</code>
-                     </td>
-                     <td>
-                         <code>bool</code>
-                     </td>
-                     <td>是否允许搜索下拉项，默认<code>false</code>。</td>
-                 </tr>
-                 <tr>
-                     <td>
-                         <code>Value</code>
-                     </td>
-                     <td>
-                         <code>TValue?</code>
-                     </td>
-                     <td>选择器的值。</td>
-                 </tr>
-                 <tr>
-                     <td>
-                         <code>ValueChanged</code>
-                     </td>
-                     <td>
-                         <code>EventCallback&lt;TValue&gt;</code>
-                     </td>
-                     <td>选择器值修改后的回调函数，一般用于双向绑定。</td>
-                 </tr>
-                 <tr>
-                     <td>
-                         <code>ValueExpression</code>
-                     </td>
-                     <td>
-                         <code>Expression&lt;Func&lt;TValue&gt;&gt;?</code>
-                     </td>
-                     <td>双向绑定下不用设置该参数。</td>
-                 </tr>
-                 <tr>
-                     <td>
-                         <code>Disabled</code>
-                     </td>
-                     <td>
-                         <code>bool</code>
-                     </td>
-                     <td>是否禁用，默认<code>false</code>。</td>
-                 </tr>
-                 <tr>
-                     <td>
-                         <code>Readonly</code>
-                     </td>
-                     <td>
-                         <code>bool</code>
-                     </td>
-                     <td>是否只读，默认<code>false</code>。</td>
-                 </tr>
-                 <tr>
-                     <td>
-                         <code>AutoFocus</code>
-                     </td>
-                     <td>
-                         <code>bool</code>
-                     </td>
-                     <td>是否自动获取焦点，默认<code>false</code>。</td>
-                 </tr>
-                 <tr>
-                     <td>
-                         <code>Required</code>
-                     </td>
-                     <td>
-                         <code>bool</code>
-                     </td>
-                     <td>是否必填项，默认<code>false</code>。</td>
-                 </tr>
-                 <tr>
-                     <td>
-                         <code>MaxHeight</code>
-                     </td>
-                     <td>
-                         <code>string?</code>
-                     </td>
-                     <td>下拉项的最大高度，该值为样式<code>max-height</code>的值，如<code>200px</code>、<code>20rem</code>等。</td>
-                 </tr>
-                 <tr>
-                     <td>
-                         <code>DirectionTop</code>
-                     </td>
-                     <td>
-                         <code>bool</code>
-                     </td>
-                     <td>下拉项是否向上展开，默认<code>false</code>。</td>
-                 </tr>
+                <tr>
+                    <td>
+                        <code>Value</code>
+                    </td>
+                    <td>
+                        <code>TValue?</code>
+                    </td>
+                    <td>选择器的值。</td>
+                </tr>
+                <tr>
+                    <td>
+                        <code>ValueChanged</code>
+                    </td>
+                    <td>
+                        <code>EventCallback&lt;TValue&gt;</code>
+                    </td>
+                    <td>选择器值修改后的回调函数，一般用于双向绑定。</td>
+                </tr>
+                <tr>
+                    <td>
+                        <code>Disabled</code>
+                    </td>
+                    <td>
+                        <code>bool</code>
+                    </td>
+                    <td>是否禁用，默认<code>false</code>。</td>
+                </tr>
+                <tr>
+                    <td>
+                        <code>Readonly</code>
+                    </td>
+                    <td>
+                        <code>bool</code>
+                    </td>
+                    <td>是否只读，默认<code>false</code>。</td>
+                </tr>
+                <tr>
+                    <td>
+                        <code>AutoFocus</code>
+                    </td>
+                    <td>
+                        <code>bool</code>
+                    </td>
+                    <td>是否自动获取焦点，默认<code>false</code>。</td>
+                </tr>
+                <tr>
+                    <td>
+                        <code>Required</code>
+                    </td>
+                    <td>
+                        <code>bool</code>
+                    </td>
+                    <td>是否必填项，默认<code>false</code>。</td>
+                </tr>
+                <tr>
+                    <td>
+                        <code>MaxHeight</code>
+                    </td>
+                    <td>
+                        <code>string?</code>
+                    </td>
+                    <td>下拉项的最大高度，该值为样式<code>max-height</code>的值，如<code>200px</code>、<code>20rem</code>等。</td>
+                </tr>
+                <tr>
+                    <td>
+                        <code>DirectionTop</code>
+                    </td>
+                    <td>
+                        <code>bool</code>
+                    </td>
+                    <td>下拉项是否向上展开，默认<code>false</code>。</td>
+                </tr>
                 <tr>
                     <th rowspan="3">
                         <code>MduiPickerItem</code>
@@ -173,7 +155,8 @@
                     <td>
                         <code>string?</code>
                     </td>
-                    <td>选择该项后，在<code>MduiPicker</code>文本框要显示的文本。（注：该值不会显示在下拉项上，如需显示请一并放在<code>ChildContent</code>中。）</td>
+                    <td>选择该项后，在<code>MduiPicker</code>文本框要显示的文本。（注：该值不会显示在下拉项上，如需显示请一并放在<code>ChildContent</code>中。）
+                    </td>
                 </tr>
                 <tr>
                     <td>
