--- a/MduiBlazor/Components/Input/MduiCheckbox.razor
+++ b/MduiBlazor/Components/Input/MduiCheckbox.razor
@@ -1,9 +1,8 @@
 @namespace MduiBlazor
 @inherits MduiInputBase<bool>
 
-<label class="mdui-@TypeName">
-    <input @ref="@Element" type="checkbox" class="@Class" style="@Style" name="@Name" required="@Required"
-        disabled="@Disabled" readonly="@Readonly" @attributes="@AdditionalAttributes"
+<label class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
+    <input @ref="@Element" type="checkbox" required="@Required" disabled="@Disabled" readonly="@Readonly"
         checked="@BindConverter.FormatValue(CurrentValue)"
         @onchange="@(EventCallback.Factory.CreateBinder<bool>(this,__value=>CurrentValue=__value,CurrentValue))"
         @onfocus="@OnInputFocus" @onblur="@OnInputBlur" />
