--- a/MduiBlazor/Components/Picker/MduiPicker.razor
+++ b/MduiBlazor/Components/Picker/MduiPicker.razor
@@ -3,9 +3,9 @@
 @inherits MduiComponentBase
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    <MduiInputText Name="@Name" Value="@DisplayValue" Readonly="@_readonly" Disabled="@Disabled"
-        Placeholder="@Placeholder" DisplayName="@DisplayName" AutoFocus="@AutoFocus" Required="@Required"
-        OnInput="@OnInput" OnFocus="@OnPickerFocus" />
+    <input class="mdui-input" value="@DisplayValue" readonly="@_readonly" disabled="@Disabled"
+        placeholder="@Placeholder" autofocus="@AutoFocus" required="@Required" @oninput="@OnInput"
+        @onfocus="@OnPickerFocus" />
     <ul class="@ContentClassname" style="@ContentStylelist">
         <CascadingValue Value="@this" IsFixed>
             @ChildContent
