--- a/mdui/src/styles/icon.less
+++ b/mdui/src/styles/icon.less
@@ -10,7 +10,6 @@
   font-weight: normal;
   font-size: 24px;  /* Preferred icon size */
   font-style: normal;
-  line-height: 1;
   direction: ltr;
   letter-spacing: normal;
   white-space: nowrap;
@@ -28,4 +27,5 @@
   display: block !important;
   width: 24px;
   height: 24px;
+  line-height: 24px;
 }
