--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -47,7 +47,7 @@
 
     <MduiDrawer Class="mdui-shadow-1" UseMduiTypo @bind-Opened="@_open" Fixed Inset="@Persistent"
         Persistent="@Persistent">
-        <MduiSwipeArea OnSwipe="@OnSwipe">
+        <MduiSwipeArea OnSwipe="@OnSwipe" Style="height:100%;">
             <NavMenu />
         </MduiSwipeArea>
     </MduiDrawer>
