--- a/MduiBlazor.Shared/Pages/TablesPage.razor
+++ b/MduiBlazor.Shared/Pages/TablesPage.razor
@@ -149,7 +149,7 @@
                     </td>
                     <td></td>
                     <td></td>
-                    <td>影响是表格容器，在表格宽度超出页面宽度时，使表格支持水平滚动。</td>
+                    <td>响应式表格容器，在表格宽度超出页面宽度时，使表格支持水平滚动。</td>
                 </tr>
             </tbody>
         </MduiSimpleTable>
